# neofoodclub.py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: CI.yml  coverage.yml  dependabot-automerge.yml  post-coverage.yml  renovate-automerge.yml  test.yml  update-submodule.yml
examples/: max_ter_example.py
neofoodclub/: __init__.py  arenas.py  bets.py  chance.py  errors.py  food_adjustments.py  math.py  modifier.py  neofoodclub.py  neofoodclub.pyi  nfc.py  odds.py  odds_change.py  pirates.py  probability_model.py  utils.py
neofoodclub/examples/: max_ter_example.py
neofoodclub/models/: __init__.py  base.py  multinomial_logit.py  original.py
neofoodclub/types/: __init__.py
src/: arena.rs  bets.rs  chance.rs  lib.rs  math.rs  modifier.rs  nfc.rs  odds.rs  odds_change.rs  pirates.rs
src/neofoodclub/: arenas.py  errors.py  food_adjustments.py  math.py  neofoodclub.py  pirates.py
src/neofoodclub/examples/: max_ter_example.py
src/neofoodclub/types/: __init__.py
tests/: conftest.py  test_arena.py  test_arenas.py  test_bet_functions.py  test_bets_bustproof.py  test_bets_crazy.py  test_bets_gambit.py  test_bets_maxter.py  test_bets_tenbet.py  test_bets_units.py  test_bustproof_bets.py  test_crazy_bets.py  test_errors.py  test_gambit_bets.py  test_math.py  test_maxter_bets.py  test_model_logit.py  test_modifiers.py  test_neofoodclub.py  test_pirates.py  test_tenbet_bets.py  test_utils.py
