[package]
name = "neofoodclub"
version = "1.0.11"
edition = "2021"

[lib]
name = "neofoodclub"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module", "abi3-py39"] }
neofoodclub = { path = "./neofoodclub_rs" }
chrono = "0.4.38"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
