[package]
name = "neofoodclub"
version = "1.0.14"
edition = "2021"

[lib]
name = "neofoodclub"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module", "abi3-py311", "chrono", "chrono-tz"] }
neofoodclub = { path = "./neofoodclub_rs" }
chrono = "0.4.38"
chrono-tz = "0.10.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
