[metadata]
name = neofoodclub.py
description = A Python implementation of functionality used in https://neofood.club
author = diceroll123
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages =
    neofoodclub
    neofoodclub.types
install_requires =
    numba
    python-dateutil
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
